GUI -CSV, MYSQL OK Sistemare questo WARNING: dic 17, 2024 4:48:08 PM javafx.fxml.FXMLLoader$ValueElement processValue                           WARNING: Loading FXML document with JavaFX API of version 22 by JavaFX runtime of version 21